[tool.poetry]
name = "chatlocal"
version = "0.1.1"
description = "chat with your local files"
authors = ["Raoul Grouls <Raoul.Grouls@han.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
GitHub = "https://github.com/raoulg/chatlocal"

[tool.poetry.dependencies]
python = "^3.9.16"
langchain = "^0.0.192"
openai = "^0.27.8"
faiss-cpu = "^1.7.4"
streamlit = "^1.23.1"
streamlit-chat = "^0.0.2.2"
tiktoken = "^0.4.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
pep8-naming = "^0.13.3"
flake8-annotations = "^3.0.1"
jupyter = "^1.0.0"
click = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
