[project]
authors = [
  {email = "Raoul.Grouls@han.nl", name = "Raoul Grouls"},
]

dependencies = [
    "langchain>=0.0.295",
    "openai>=0.28.0",
    "faiss-cpu>=1.7.4",
    "streamlit>=1.12.0",
    "loguru>=0.7.2",
    "pdftotext>=2.2.2",
    "streamlit-chat>=0.1.1",
    "tiktoken>=0.5.1",
    "python-docx>=0.8.11",
    "toml>=0.10.2",
]

description = "chat with your local files"
license = {text = "MIT"}
name = "chatlocal"
version = "0.1.2"
readme = "README.md"
requires-python = ">=3.9, <3.11"

[project.urls]
GitHub = "https://github.com/raoulg/chatlocal"

[tool]

[tool.ruff]
ignore = [
  "ANN101",
  "ANN102",
  "D",
  "FIX002",
  "PGH003"
]
include = ["**/pyproject.toml", "*.ipynb", "*.py", "*.pyi"]
line-length = 88
select = ["ALL"]

[tool.tomlsort]
# In our context, arrays often are misused as sets, so their order doesn't matter.
# Sort all key-like entries lexicographically in increasing order.
all = true
in_place = true
trailing_comma_inline_array = true

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.0.290",
    "mypy>=1.5.1",
    "black>=23.9.1",
]
dev = [
    "jupyter>=1.0.0",
]
[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]